# CMake_Lesson7_Ex1

./: CMakeLists.txt
Lesson7/: CMakeLists.txt  Lesson7.h
Lesson7/include/: point.h  tools.h
Lesson7/src/: Lesson7.cpp  point.cpp  tools.cpp
